styling header area

--- a/index.html
+++ b/index.html
@@ -25,8 +25,16 @@
             <img src="./img/undraw_add_color_19gv.svg" alt="">
         </div>
         <div class="section1Button">
-            <h1>SU<SPan class="color">MM</SPan> ER COLLECT<SPAN class="color">ION</SPAN></h1>
+            <h1>SU<SPan class="color">MM</SPan>ER </h1>
+            <h2> COLLECT<SPAN class="color">ION</SPAN></h2>
             <BUTTon class="btn">Buy Now</BUTTon>
+        </div>
+
+        <div class="iconArea">
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
     </div>
 </body>
