--- a/index.html
+++ b/index.html
@@ -37,5 +37,53 @@
             <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
     </div>
+
+    <section class="porductSection">
+        <h3>New <span> Bags</span> Collection</h3>
+
+        <div class="product">
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
