--- a/index.html
+++ b/index.html
@@ -50,7 +50,21 @@
             </div>
 
             <div class="productBox">
-                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <img src="./img/undraw_add_color_19gv.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_Successful_purchase_re_mpig.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_Successful_purchase_re_mpig.svg" alt="">
                 <p>Black Genuine Leather Bags.</p>
                 <a href="#">$23.3</a>
                 <a href="#" class="butBtn">Add to Card</a>
@@ -64,26 +78,87 @@
             </div>
 
             <div class="productBox">
-                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
-                <p>Black Genuine Leather Bags.</p>
-                <a href="#">$23.3</a>
-                <a href="#" class="butBtn">Add to Card</a>
-            </div>
-
-            <div class="productBox">
-                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
-                <p>Black Genuine Leather Bags.</p>
-                <a href="#">$23.3</a>
-                <a href="#" class="butBtn">Add to Card</a>
-            </div>
-
-            <div class="productBox">
-                <img src="./img/undraw_shopping_app_flsj.svg" alt="">
+                <img src="./img/undraw_add_color_19gv.svg" alt="">
                 <p>Black Genuine Leather Bags.</p>
                 <a href="#">$23.3</a>
                 <a href="#" class="butBtn">Add to Card</a>
             </div>
         </div>
     </section>
+
+    <section class="about">
+        <div class="aboutBox">
+            <h1>About Company</h1>
+            <h4>Small E-commerce  Platform 2021 Nwe Arrivals Mini Messenger <span>Buy Now</span></h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus qui possimus dolorum, architecto perspiciatis dolores consequatur quos perferendis, nemo itaque magni tempore non rem facilis nostrum? Est ex at fugit?</p>
+        </div>
+        <div class="aboutBox">
+            <img src="./img/undraw_heatmap_uyye.svg" alt="">
+        </div>
+    </section>
+
+
+    <section class="porductSection">
+        <h3>Watch <span> es</span> <span>Show</span>case</h3>
+
+        <div class="product">
+            <div class="productBox">
+                <img src="./img/undraw_watch_application_uhc9.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_smartwatch_74tv.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_in_no_time_6igu.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_in_no_time_6igu.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_watch_application_uhc9.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+
+            <div class="productBox">
+                <img src="./img/undraw_smartwatch_74tv.svg" alt="">
+                <p>Black Genuine Leather Bags.</p>
+                <a href="#">$23.3</a>
+                <a href="#" class="butBtn">Add to Card</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="notification">
+        <h1>Subscribe For New Product Notification</h1>
+        <div class="notificationInput">
+            <input type="email" placeholder="Enter Your E-mail">
+            <a href="" class="notificationBtn">SEND</a>
+        </div>
+    </section>
+    <hr>
+
+
+     <footer>
+        <p>@ AllRight Reserved By Mofig programmer</p>
+     </footer>
+
 </body>
 </html>
